added code template for documentation

--- a/html/documentation.html
+++ b/html/documentation.html
@@ -126,7 +126,31 @@
         </div>
     </div>
     <div class="col-md-4" style="background-color: #212D3B; height: 100%; width: 100%; ">
-
+        <div class="GoalObjects" style="padding: 20px; margin-top: 20px">
+            <h3 style="color: white">Goals</h3>
+            <br>
+            <p style="color: white; opacity: 0.8; font-size: 15px">Example of a goal object</p>
+            <div style="background-color: #1C2631; border-radius: 5px; margin-top: -10px">
+                <div style="padding: 10px; color: white; opacity: 0.8;">
+                    “GOAL DATA” : “GOAL DATA——*********——GOAL DATA”, <br>
+                    <br>
+                    &nbsp; “Goals”: [ <br>
+                    &nbsp; &nbsp; { <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; “Pickup 1” : “Orange Box”, <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; “Type”: “Pickup”, <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; “Tag”: “1”, <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; “Color”: “F26406”, <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; “SoundLocation”: “eat”, <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; “Location”: [10,15,0.5], <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; “Length”: 1, <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; “Width”: 1, <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; “Height”: 1, <br>
+                    &nbsp; &nbsp; &nbsp; &nbsp; “GoalRotation”: 0 <br>
+                    &nbsp; &nbsp;} <br>
+                    &nbsp;], <br>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
