added all completed documentation and scroll feature

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="./html/documentation.html">Documentation</a>
+                <a class="nav-link" href="./html/documentation.html">Documentation</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./html/tutorial.html">Tutorials</a>
