--- a/html/contact.html
+++ b/html/contact.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="./documentation.html">Documentation</a>
+                <a class="nav-link" href="./documentation.html">Documentation</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./tutorial.html">Tutorials</a>
